--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "marked": "^14.1.2",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "react-markdown": "^9.0.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
